--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,5 @@
 packages:
   - packages/*
-  - utils/*
 
 overrides:
   '@intlify/message-compiler': ^11.1.2
@@ -23,6 +22,9 @@ catalog:
   '@nuxtjs/color-mode': 3.5.2
   '@nuxtjs/i18n': 9.3.0
   '@pinia/nuxt': ^0.11.0
+  '@rollup/plugin-commonjs': ^28.0.3
+  '@rollup/plugin-node-resolve': ^16.0.1
+  '@rollup/plugin-typescript': ^12.1.2
   '@t3-oss/env-core': ^0.12.0
   '@tanstack/eslint-plugin-query': ^5.73.3
   '@tanstack/vue-form': ^1.6.3
