feat: use remote download link

--- a/packages/webview/package.json
+++ b/packages/webview/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weila-corp-mgr-nuxt",
+  "name": "weila-corp-mgr-app",
   "type": "module",
   "version": "1.0.0",
   "private": true,
