pref: move app download page to content package

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,6 +42,7 @@ catalog:
   '@types/nprogress': ^0.2.3
   '@types/sortablejs': ^1.15.8
   '@unhead/vue': ^2.0.8
+  '@unocss/core': ^65.4.0
   '@unocss/eslint-plugin': ^66.0.0
   '@unocss/nuxt': 66.1.0-beta.3
   '@unocss/preset-web-fonts': 66.1.0-beta.3
@@ -137,7 +138,6 @@ catalog:
   viewerjs: ^1.11.7
   vite: ^6.3.2
   vite-plugin-compression: ^0.5.1
-  vite-plugin-dts: ^4.5.3
   vite-plugin-imagemin: ^0.6.1
   vite-plugin-mkcert: ^1.17.8
   vite-plugin-mock: ^3.0.2
