--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
+    "postinstall": "pnpm -C packages/network run build",
     "dev:web": "pnpm -C packages/web run dev",
     "dev:webview": "pnpm -C packages/webview run dev",
     "dev:network": "pnpm -C packages/network run dev",
@@ -28,7 +29,7 @@
     "eslint-plugin-unimport": "catalog:",
     "lint-staged": "catalog:",
     "unbuild": "catalog:",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
