--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -138,6 +138,7 @@ catalog:
   viewerjs: ^1.11.7
   vite: ^6.3.2
   vite-plugin-compression: ^0.5.1
+  vite-plugin-dts: ^4.5.3
   vite-plugin-imagemin: ^0.6.1
   vite-plugin-mkcert: ^1.17.8
   vite-plugin-mock: ^3.0.2
