--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,6 @@ packages:
 
 overrides:
   '@intlify/message-compiler': ^11.1.2
-
 catalog:
   '@antfu/eslint-config': ^4.10.2
   '@antfu/ni': ^24.3.0
@@ -62,6 +61,7 @@ catalog:
   '@vueuse/router': ^13.1.0
   '@vueuse/sound': ^2.1.3
   apipost-mock-gen: ^0.1.5
+  arco-design-nuxt-module: 0.2.1
   axios: ^1.8.4
   browser-image-compression: ^2.0.2
   bumpp: ^10.1.0
@@ -154,3 +154,20 @@ catalog:
   whatwg-fetch: ^3.6.20
   zod: ^3.24.3
   zx: ^8.5.3
+catalogs:
+  conflicts_md5_:
+    md5: ''
+  conflicts_md5_c:
+    md5: c
+  conflicts_md5_ca:
+    md5: ca
+  conflicts_md5_cat:
+    md5: cat
+  conflicts_md5_cata:
+    md5: cata
+  conflicts_md5_catal:
+    md5: catal
+  conflicts_md5_catalo:
+    md5: catalo
+  conflicts_md5_catalog:
+    md5: catalog
