feat: 基本提交审核逻辑

--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "lint-staged": {
     "*": "eslint --fix"
+  },
+  "dependencies": {
+    "valibot": "^1.1.0",
+    "zod-arco-rules": "^0.1.0"
   }
 }
