--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,7 +41,6 @@
     "@vueuse/integrations": "catalog:",
     "@vueuse/router": "catalog:",
     "@vueuse/sound": "catalog:",
-    "@weila/network": "workspace:*",
     "axios": "catalog:",
     "browser-image-compression": "catalog:",
     "clsx": "catalog:",
@@ -88,6 +87,8 @@
     "@vuemap/vue-amap": "catalog:",
     "@vuemap/vue-amap-extra": "catalog:",
     "@vuemap/vue-amap-loca": "catalog:",
+    "@weila/network": "workspace:*",
+    "@wl/network": "link://../../../network",
     "apipost-mock-gen": "catalog:",
     "bumpp": "catalog:",
     "cross-env": "catalog:",
