--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -60,6 +60,8 @@ catalog:
   '@vueuse/nuxt': ^13.1.0
   '@vueuse/router': ^13.1.0
   '@vueuse/sound': ^2.1.3
+  '@weila/network': 'lin'
+  '@wl/network': ''
   apipost-mock-gen: ^0.1.5
   axios: ^1.8.4
   browser-image-compression: ^2.0.2
@@ -153,3 +155,26 @@ catalog:
   whatwg-fetch: ^3.6.20
   zod: ^3.24.3
   zx: ^8.5.3
+catalogs:
+  conflicts_@weila/network_:
+    '@weila/network': ''
+  conflicts_@weila/network_w:
+    '@weila/network': w
+  conflicts_@weila/network_wro:
+    '@weila/network': wro
+  conflicts_@weila/network_wrok:
+    '@weila/network': wrok
+  conflicts_@weila/network_wr:
+    '@weila/network': wr
+  conflicts_@weila/network_wo:
+    '@weila/network': wo
+  conflicts_@weila/network_wor:
+    '@weila/network': wor
+  conflicts_@weila/network_work:
+    '@weila/network': work
+  conflicts_@weila/network_works:
+    '@weila/network': works
+  conflicts_@weila/network_worksp:
+    '@weila/network': worksp
+  conflicts_@weila/network_workspa:
+    '@weila/network': workspa
