--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -46,6 +46,7 @@ catalog:
   '@unocss/nuxt': 66.1.0-beta.3
   '@unocss/preset-web-fonts': 66.1.0-beta.3
   '@unocss/reset': 66.1.0-beta.3
+  '@valibot/i18n': ^1.0.0
   '@vee-validate/nuxt': ^4.15.0
   '@vee-validate/zod': ^4.15.0
   '@videojs-player/vue': ^1.0.0
@@ -60,8 +61,6 @@ catalog:
   '@vueuse/nuxt': ^13.1.0
   '@vueuse/router': ^13.1.0
   '@vueuse/sound': ^2.1.3
-  '@weila/network': 'lin'
-  '@wl/network': ''
   apipost-mock-gen: ^0.1.5
   axios: ^1.8.4
   browser-image-compression: ^2.0.2
@@ -132,6 +131,7 @@ catalog:
   unplugin-vue-components: ^28.5.0
   unplugin-vue-macros: ^2.14.5
   unplugin-vue-router: ^0.12.0
+  valibot: ^1.1.0
   vaul-vue: ^0.4.1
   vconsole: ^3.15.1
   vee-validate: ^4.15.0
@@ -154,27 +154,5 @@ catalog:
   vue-tsc: ^2.2.8
   whatwg-fetch: ^3.6.20
   zod: ^3.24.3
+  zod-arco-rules: ^1.0.0
   zx: ^8.5.3
-catalogs:
-  conflicts_@weila/network_:
-    '@weila/network': ''
-  conflicts_@weila/network_w:
-    '@weila/network': w
-  conflicts_@weila/network_wro:
-    '@weila/network': wro
-  conflicts_@weila/network_wrok:
-    '@weila/network': wrok
-  conflicts_@weila/network_wr:
-    '@weila/network': wr
-  conflicts_@weila/network_wo:
-    '@weila/network': wo
-  conflicts_@weila/network_wor:
-    '@weila/network': wor
-  conflicts_@weila/network_work:
-    '@weila/network': work
-  conflicts_@weila/network_works:
-    '@weila/network': works
-  conflicts_@weila/network_worksp:
-    '@weila/network': worksp
-  conflicts_@weila/network_workspa:
-    '@weila/network': workspa
