--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -61,6 +61,7 @@ catalog:
   '@vueuse/nuxt': ^13.1.0
   '@vueuse/router': ^13.1.0
   '@vueuse/sound': ^2.1.3
+  '@wl/network': https://pkg.pr.new/kvoon3/wl-network/@weila/network@9e18454
   apipost-mock-gen: ^0.1.5
   axios: ^1.8.4
   browser-image-compression: ^2.0.2
