--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -74,6 +74,7 @@
     "@iconify-json/ph": "catalog:",
     "@iconify-json/svg-spinners": "catalog:",
     "@intlify/eslint-plugin-vue-i18n": "catalog:",
+    "@kvoon/utils": "catalog:",
     "@modyfi/vite-plugin-yaml": "catalog:",
     "@tanstack/eslint-plugin-query": "catalog:",
     "@types/crypto-js": "catalog:",
