--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalog:
   '@iconify-json/svg-spinners': ^1.2.2
   '@internationalized/date': ^3.8.0
   '@intlify/eslint-plugin-vue-i18n': ^4.0.1
+  '@kvoon/utils': latest
   '@modyfi/vite-plugin-yaml': ^1.1.1
   '@nuxt/eslint': 1.0.1
   '@nuxt/icon': 1.10.3
@@ -61,7 +62,7 @@ catalog:
   '@vueuse/nuxt': ^13.1.0
   '@vueuse/router': ^13.1.0
   '@vueuse/sound': ^2.1.3
-  '@wl/network': https://pkg.pr.new/kvoon3/wl-network/@weila/network@9e18454
+  '@wl/network': https://pkg.pr.new/kvoon3/wl-network/@weila/network@6319a58f51b689ef90e0cebf528ad0d956752294
   apipost-mock-gen: ^0.1.5
   axios: ^1.8.4
   browser-image-compression: ^2.0.2
