--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -92,7 +92,7 @@
     "@vuemap/vue-amap-extra": "catalog:",
     "@vuemap/vue-amap-loca": "catalog:",
     "@weila/network": "workspace:*",
-    "@wl/network": "link://../../../network",
+    "@wl/network": "catalog:",
     "apipost-mock-gen": "catalog:",
     "bumpp": "catalog:",
     "cross-env": "catalog:",
