--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:network": "pnpm -C packages/network run build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "lint-staged": "npx lint-staged"
+    "lint-staged": "npx lint-staged",
+    "up": "nlx taze -I major"
   },
   "dependencies": {
     "valibot": "catalog:"
