--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "dev": "vite --config vite.config.dev.ts",
+    "build:staging": "vite build --mode staging -c vite.config.prod.ts",
     "build": "vite build -c vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview --host",
