--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
 
 overrides:
   '@intlify/message-compiler': ^11.1.2
+  vite: 'npm:rolldown-vite@latest'
 catalog:
   '@antfu/eslint-config': ^4.10.2
   '@antfu/ni': ^24.3.0
@@ -138,7 +139,7 @@ catalog:
   vee-validate: ^4.15.0
   video.js: ^8.22.0
   viewerjs: ^1.11.7
-  vite: ^6.3.2
+  vite: ^7.1.4
   vite-plugin-compression: ^0.5.1
   vite-plugin-dts: ^4.5.3
   vite-plugin-imagemin: ^0.6.1
