--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "up": "nlx taze -I major"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.4.2",
     "valibot": "catalog:"
   },
   "devDependencies": {
