--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weila-corp-manager-web",
+  "name": "weila-corp-manager-web_intl",
   "type": "module",
   "version": "1.1.1",
   "private": true,
